fix: remove giant p gap for cards

--- a/app/components/button.css
+++ b/app/components/button.css
@@ -11,8 +11,8 @@
   border-radius: var(--border-radius);
   border: none;
 
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke;
+  transition-property:
+    color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 
